# AlphaFamSeq

./: .gitmodules  AlphaFamSeqPlusGeneProb.f90  AlphaFamSeqSpec.txt  AlphaVarCallParallelised.f90  CMakeLists.txt  Ferdosi.f90  README.md
src/: AlphaFamSeqPlusGeneProb.f90  AlphaVarCallParallelised.f90  CMakeLists.txt  ComputeStat.f90  ReadRogerData.f90  specFileModule.f90
